# sui-fuzzer

./: .gdb_history  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  config.json  docker_run.sh  log
corpus/: 2023-12-20--10:55:23.json  2023-12-20--10:55:24.json  2023-12-20--10:55:27.json  2023-12-20--10:55:36.json  2023-12-20--10:55:42.json  2023-12-20--10:55:46.json  2023-12-20--10:55:51.json  2023-12-20--10:55:52.json  2023-12-20--10:55:54.json  2023-12-20--10:56:05.json  2023-12-20--10:56:09.json
doc/: how_to_create_a_contract.md  how_to_use.md  how_to_use_stateful.md  how_to_use_stateless.md
examples/arithmetic_errors_package/: Move.toml
examples/arithmetic_errors_package/sources/: arithmetic_errors_module.move
examples/calculator_package/: Move.toml
examples/calculator_package/sources/: calculator_module.move
examples/fuzzinglabs_package/: Move.toml  output.bpl
examples/fuzzinglabs_package/sources/: fuzzinglabs_module.move
examples/hero/: Move.toml
examples/hero/sources/: example.move
examples/loop_package/: Move.toml
fuzzinglabs_package/: Move.toml
fuzzinglabs_package/sources/: fuzzinglabs_module.move
src/: main.rs
src/detector/: basic_opcode_detector.rs  detector.rs  mod.rs
src/fuzzer/: config.rs  coverage.rs  crash.rs  error.rs  fuzzer.rs  fuzzer_utils.rs  mod.rs  stats.rs
src/mutator/: mod.rs  mutator.rs  rng.rs  sui_mutator.rs  types.rs
src/runner/: mod.rs  runner.rs  sui_runner.rs  sui_runner_utils.rs
src/runner/stateful_runner/: mod.rs  sui_runner.rs
src/runner/stateless_runner/: mod.rs  sui_runner.rs  sui_runner_utils.rs
src/ui/: detectors_widget.rs  events_widget.rs  global_stats_widget.rs  graphs_widget.rs  mod.rs  stats_widget.rs  target_infos_widget.rs  ui.rs  utils.rs  widget.rs  worker_stats_widget.rs
src/worker/: mod.rs  stateful_worker.rs  stateless_worker.rs  worker.rs
