[package]
name = "fuzzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bichannel = "0.0.4"
clap = { version = "4.4.4", features = ["derive"] }
ratatui = { version = "0.23.0", features = ["all-widgets"] }
serde = { version = "1.0.188", features = ["derive", "serde_derive"] }
serde_json = "1.0.107"

# Sui dependencies
sui-move-build = { path = "./sui/crates/sui-move-build"}
move-vm-runtime = { path = "./sui/external-crates/move-execution/v0/move-vm/runtime", package = "move-vm-runtime-v0"}
move-vm-types = { path = "./sui/external-crates/move/move-vm/types" }
move-binary-format = { path = "./sui/external-crates/move/move-binary-format" }
move-core-types = { path = "./sui/external-crates/move/move-core/types" }
shared-crypto = { path = "./sui/crates/shared-crypto"}
sui-keys = { path = "./sui/crates/sui-keys"}
crossterm = "0.27.0"
